# libjson

./: CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
include/: dummy.hpp
src/: dummy.cpp
tests/: dummy_test.cpp
